test/parse/expr/bulk-memory-disabled.txt
;;; TOOL: wat2wasm
;;; ERROR: 1

(module
  (memory 1)
  (data $data "a")
  (func
    i32.const 0 i32.const 0 i32.const 0 memory.init 0
    data.drop 0
    i32.const 0 i32.const 0 i32.const 0 memory.copy
    i32.const 0 i32.const 0 i32.const 0 memory.fill
  )

  (table 1 anyfunc)
  (elem $elem funcref 0)
  (func
    i32.const 0 i32.const 0 i32.const 0 table.init 0
    elem.drop 0
    i32.const 0 i32.const 0 i32.const 0 table.copy
  )
)
(;; STDERR ;;;
out/test/parse/expr/bulk-memory-disabled.txt:8:41: error: opcode not allowed: memory.init
    i32.const 0 i32.const 0 i32.const 0 memory.init 0
                                        ^^^^^^^^^^^
out/test/parse/expr/bulk-memory-disabled.txt:9:5: error: opcode not allowed: data.drop
    data.drop 0
    ^^^^^^^^^
out/test/parse/expr/bulk-memory-disabled.txt:10:41: error: opcode not allowed: memory.copy
    i32.const 0 i32.const 0 i32.const 0 memory.copy
                                        ^^^^^^^^^^^
out/test/parse/expr/bulk-memory-disabled.txt:11:41: error: opcode not allowed: memory.fill
    i32.const 0 i32.const 0 i32.const 0 memory.fill
                                        ^^^^^^^^^^^
out/test/parse/expr/bulk-memory-disabled.txt:17:41: error: opcode not allowed: table.init
    i32.const 0 i32.const 0 i32.const 0 table.init 0
                                        ^^^^^^^^^^
out/test/parse/expr/bulk-memory-disabled.txt:18:5: error: opcode not allowed: elem.drop
    elem.drop 0
    ^^^^^^^^^
out/test/parse/expr/bulk-memory-disabled.txt:19:41: error: opcode not allowed: table.copy
    i32.const 0 i32.const 0 i32.const 0 table.copy
                                        ^^^^^^^^^^
;;; STDERR ;;)
